--- a/index.html
+++ b/index.html
@@ -4,19 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body {
-            display: flex;
-            flex-wrap: wrap;
-        }
-        div {
-            width: 100px;
-            height: 100px;
-            background-color: black;
-            color: white;
-            margin: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="std.css">
 </head>
 <body>
 
