--- a/index2.html
+++ b/index2.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        div {
-            display: inline-block;
+        main {
+            display: flex;
+            flex-wrap: wrap;
+        }
+
+        main div {
             width: 100px;
             height: 100px;
             background-color: black;
