--- a/index.html
+++ b/index.html
@@ -4,52 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="std.css">
+    <link rel="stylesheet" href="./std.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css" />
 </head>
 <body>
-
-    <div>
-        5
-    </div>
-    <div>
-        5
-    </div>
-    <div>
-        5
-    </div>
-    <div>
-        5
-    </div>
-    <div>
-        5
-    </div>
-    <div>
-        5
-    </div>
-    <div>
-        5
-    </div>
-
-    <div>
-        5
-    </div>
-    <div>
-        5
-    </div>
-    <div>
-        5
-    </div>
-    <div>
-        5
-    </div>
-    <div>
-        5
-    </div>
-    <div>
-        5
-    </div>
-    <div>
-        5
-    </div>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="/home">Home</a></li>
+                <li><a href="/firest">first</a></li>
+                <li><a href="/second">second</a></li>
+                <li><a href="/minimaze">minimaze</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
