--- a/index2.html
+++ b/index2.html
@@ -20,6 +20,7 @@
     </style>
 </head>
 <body>
+    <header></header>
     <main>
         <div>5</div>
         <div>5</div>
@@ -35,5 +36,6 @@
         <div>5</div>
         <div>5</div>
     </main>
+    <footer></footer>
 </body>
 </html>
