--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="/home">Home</a></li>
-                <li><a href="/firest">first</a></li>
+                <li><a href="/first">first</a></li>
                 <li><a href="/second">second</a></li>
                 <li><a href="/minimaze">minimaze</a></li>
             </ul>
