--- a/index1.html
+++ b/index1.html
@@ -16,6 +16,7 @@
     </style>
 </head>
 <body>
+    <header></header>
     <main>
         <div>5</div>
         <div>5</div>
@@ -31,5 +32,6 @@
         <div>5</div>
         <div>5</div>
     </main>
+    <footer></footer>
 </body>
 </html>
