--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="/home">Home</a></li>
-                <li><a href="/first">first</a></li>
-                <li><a href="/second">second</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/index1">first</a></li>
+                <li><a href="/index2">second</a></li>
                 <li><a href="/minimaze">minimaze</a></li>
             </ul>
         </nav>
