--- a/index1.html
+++ b/index1.html
@@ -4,15 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./std.css"/>
+    <link rel="stylesheet" href="./index1.css"/>
     <style>
-        div {
-            display: inline-block;
-            width: 100px;
-            height: 100px;
-            background-color: black;
-            color: white;
-            margin: 10px;
-        }
+
     </style>
 </head>
 <body>
