--- a/index2.html
+++ b/index2.html
@@ -4,20 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        main {
-            display: flex;
-            flex-wrap: wrap;
-        }
-
-        main div {
-            width: 100px;
-            height: 100px;
-            background-color: black;
-            color: white;
-            margin: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="./std.css"/>
+    <link rel="stylesheet" href="./index2.css"/>
 </head>
 <body>
     <header></header>
