--- a/minimaze.html
+++ b/minimaze.html
@@ -4,32 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./std.css"/>
+    <link rel="stylesheet" href="./minimaze.css"/>
     <script>
         function onClick() {
             document.getElementById("minimize").classList.toggle("minimazed")
         }
     </script>
-    <style>
-        body {
-            display: flex;
-        }
-
-        .grow-0 {
-            flex-grow: 0;
-            padding: 10px;
-            background-color: blue;
-            color: white;
-        }
-
-        .grow-1 {
-            flex-grow: 1;
-            padding: 10px;
-        }
-
-        .minimazed {
-            width: 60px;
-        }
-    </style>
 </head>
 <body>
     <header></header>
