--- a/flexbox.html
+++ b/flexbox.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Second</title>
     <link rel="stylesheet" href="./std.css"/>
-    <link rel="stylesheet" href="./index1.css"/>
-    <style>
-
-    </style>
+    <link rel="stylesheet" href="./flexbox.css"/>
 </head>
 <body>
     <header></header>
