--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="./std.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css" />
 </head>
 <body>
     <header>
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/index1">first</a></li>
-                <li><a href="/index2">second</a></li>
-                <li><a href="/minimaze">minimaze</a></li>
+                <li><a href="/flexbox">flexbox</a></li>
+                <li><a href="/inline-block">inline-block</a></li>
+                <li><a href="/minimaze">minimize</a></li>
             </ul>
         </nav>
     </header>
