--- a/minimize.html
+++ b/minimize.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Minimize</title>
     <link rel="stylesheet" href="./std.css"/>
-    <link rel="stylesheet" href="./minimaze.css"/>
+    <link rel="stylesheet" href="./minimize.css"/>
     <script>
         function onClick() {
-            document.getElementById("minimize").classList.toggle("minimazed")
+            document.getElementById("minimize").classList.toggle("minimized")
         }
     </script>
 </head>
