--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/flexbox">flexbox</a></li>
                 <li><a href="/inline-block">inline-block</a></li>
-                <li><a href="/minimaze">minimize</a></li>
+                <li><a href="/minimize">minimize</a></li>
             </ul>
         </nav>
     </header>
