--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <header>
         <nav>
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/flexbox">flexbox</a></li>
-                <li><a href="/inline-block">inline-block</a></li>
-                <li><a href="/minimize">minimize</a></li>
+                <li><a href="">Home</a></li>
+                <li><a href="flexbox/">flexbox</a></li>
+                <li><a href="inline-block/">inline-block</a></li>
+                <li><a href="minimize/">minimize</a></li>
             </ul>
         </nav>
     </header>
