--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Second</title>
-    <link rel="stylesheet" href="./std.css"/>
-    <link rel="stylesheet" href="./flexbox/flexbox"/>
+    <link rel="stylesheet" href="std.css"/>
+    <link rel="stylesheet" href="flexbox/flexbox.css"/>
 </head>
 <body>
     <header></header>
