--- a/inline-block/inline-block.html
+++ b/inline-block/inline-block.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First</title>
-    <link rel="stylesheet" href="./std.css"/>
-    <link rel="stylesheet" href="./inline-block.css"/>
+    <link rel="stylesheet" href="std.css"/>
+    <link rel="stylesheet" href="inline-block/inline-block.css"/>
 </head>
 <body>
     <header></header>
