--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Second</title>
+    <title>Flexbox</title>
     <link rel="stylesheet" href="./std.css"/>
-    <link rel="stylesheet" href=",.flexbox/flexbox.css"/>
+    <link rel="stylesheet" href=",/flexbox/flexbox.css"/>
 </head>
 <body>
     <header></header>
