--- a/inline-block/inline-block.html
+++ b/inline-block/inline-block.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First</title>
+    <title>Inline-block</title>
     <link rel="stylesheet" href=",/std.css"/>
     <link rel="stylesheet" href=",/inline-block/inline-block.css"/>
 </head>
