--- a/minimize/index.html
+++ b/minimize/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minimize</title>
-    <link rel="stylesheet" href=",/std.css"/>
-    <link rel="stylesheet" href=",/minimize/minimize.css"/>
+    <link rel="stylesheet" href="./std.css"/>
+    <link rel="stylesheet" href="./minimize/style.css"/>
     <script>
         function onClick() {
             document.getElementById("minimize").classList.toggle("minimized")
