--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flexbox</title>
     <link rel="stylesheet" href="./std.css"/>
-    <link rel="stylesheet" href=",/flexbox/flexbox.css"/>
+    <link rel="stylesheet" href="./flexbox/style.css"/>
 </head>
 <body>
     <header></header>
