--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/flexbox/">flexbox</a></li>
-                <li><a href="/inline-block/">inline-block</a></li>
-                <li><a href="/minimize/">minimize</a></li>
+                <li><a href="/flexbox/">Flexbox</a></li>
+                <li><a href="/inline-block/">Inline-block</a></li>
+                <li><a href="/minimize/">Minimize</a></li>
             </ul>
         </nav>
     </header>
