--- a/inline-block/index.html
+++ b/inline-block/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inline-block</title>
     <link rel="stylesheet" href="../std.css"/>
-    <link rel="stylesheet" href="./style.css"/>
+    <link rel="stylesheet" href="./main.css"/>
 </head>
 <body>
     <header></header>
