--- a/inline-block/index.html
+++ b/inline-block/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inline-block</title>
-    <link rel="stylesheet" href="../std.css"/>
-    <link rel="stylesheet" href="./main.css"/>
+    <link rel="stylesheet" href="main.css"/>
 </head>
 <body>
     <header></header>
