--- a/index.html
+++ b/index.html
@@ -10,14 +10,22 @@
     <header>
         <nav>
             <ul>
+                <li><a href="https://github.com/Yulai202020/demos">Github</a></li>
+                <li><a href="https://www.youtube.com/@yulainigmatullin5050">Youtube</a></li>
+                <li><a href="https://www.frontendmentor.io/profile/Yulai202020">Frontend Mentor</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <nav>
+            <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/flexbox/">Flexbox</a></li>
                 <li><a href="/inline-block/">Inline-block</a></li>
                 <li><a href="/minimize/">Minimize</a></li>
             </ul>
         </nav>
-    </header>
-    <main></main>
+    </main>
     <footer></footer>
 </body>
 </html>
