--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <header>
         <nav>
             <ul>
-                <li><a href="https://github.com/Yulai202020/demos">Github</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="https://github.com/Yulai202020/">Github</a></li>
                 <li><a href="https://www.youtube.com/@yulainigmatullin5050">Youtube</a></li>
                 <li><a href="https://www.frontendmentor.io/profile/Yulai202020">Frontend Mentor</a></li>
             </ul>
@@ -19,7 +20,6 @@
     <main>
         <nav>
             <ul>
-                <li><a href="/">Home</a></li>
                 <li><a href="/flexbox/">Flexbox</a></li>
                 <li><a href="/inline-block/">Inline-block</a></li>
                 <li><a href="/minimize/">Minimize</a></li>
