--- a/positions/index.html
+++ b/positions/index.html
@@ -16,6 +16,28 @@
 
         <div id="fullsize" class="fullsize">
             <button onclick="onClick()">hide</button>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quae voluptatem temporibus? Repellat beatae vel harum totam nemo, necessitatibus, quam itaque earum, quidem sunt eius quia dolore natus odit tenetur.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quae voluptatem temporibus? Repellat beatae vel harum totam nemo, necessitatibus, quam itaque earum, quidem sunt eius quia dolore natus odit tenetur.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quae voluptatem temporibus? Repellat beatae vel harum totam nemo, necessitatibus, quam itaque earum, quidem sunt eius quia dolore natus odit tenetur.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quae voluptatem temporibus? Repellat beatae vel harum totam nemo, necessitatibus, quam itaque earum, quidem sunt eius quia dolore natus odit tenetur.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quae voluptatem temporibus? Repellat beatae vel harum totam nemo, necessitatibus, quam itaque earum, quidem sunt eius quia dolore natus odit tenetur.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quae voluptatem temporibus? Repellat beatae vel harum totam nemo, necessitatibus, quam itaque earum, quidem sunt eius quia dolore natus odit tenetur.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quae voluptatem temporibus? Repellat beatae vel harum totam nemo, necessitatibus, quam itaque earum, quidem sunt eius quia dolore natus odit tenetur.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quae voluptatem temporibus? Repellat beatae vel harum totam nemo, necessitatibus, quam itaque earum, quidem sunt eius quia dolore natus odit tenetur.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quae voluptatem temporibus? Repellat beatae vel harum totam nemo, necessitatibus, quam itaque earum, quidem sunt eius quia dolore natus odit tenetur.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quae voluptatem temporibus? Repellat beatae vel harum totam nemo, necessitatibus, quam itaque earum, quidem sunt eius quia dolore natus odit tenetur.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quae voluptatem temporibus? Repellat beatae vel harum totam nemo, necessitatibus, quam itaque earum, quidem sunt eius quia dolore natus odit tenetur.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quae voluptatem temporibus? Repellat beatae vel harum totam nemo, necessitatibus, quam itaque earum, quidem sunt eius quia dolore natus odit tenetur.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quae voluptatem temporibus? Repellat beatae vel harum totam nemo, necessitatibus, quam itaque earum, quidem sunt eius quia dolore natus odit tenetur.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quae voluptatem temporibus? Repellat beatae vel harum totam nemo, necessitatibus, quam itaque earum, quidem sunt eius quia dolore natus odit tenetur.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quae voluptatem temporibus? Repellat beatae vel harum totam nemo, necessitatibus, quam itaque earum, quidem sunt eius quia dolore natus odit tenetur.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quae voluptatem temporibus? Repellat beatae vel harum totam nemo, necessitatibus, quam itaque earum, quidem sunt eius quia dolore natus odit tenetur.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quae voluptatem temporibus? Repellat beatae vel harum totam nemo, necessitatibus, quam itaque earum, quidem sunt eius quia dolore natus odit tenetur.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quae voluptatem temporibus? Repellat beatae vel harum totam nemo, necessitatibus, quam itaque earum, quidem sunt eius quia dolore natus odit tenetur.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quae voluptatem temporibus? Repellat beatae vel harum totam nemo, necessitatibus, quam itaque earum, quidem sunt eius quia dolore natus odit tenetur.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quae voluptatem temporibus? Repellat beatae vel harum totam nemo, necessitatibus, quam itaque earum, quidem sunt eius quia dolore natus odit tenetur.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quae voluptatem temporibus? Repellat beatae vel harum totam nemo, necessitatibus, quam itaque earum, quidem sunt eius quia dolore natus odit tenetur.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quae voluptatem temporibus? Repellat beatae vel harum totam nemo, necessitatibus, quam itaque earum, quidem sunt eius quia dolore natus odit tenetur.</p>
         </div>
     </main>
     <footer></footer>
