--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
         </nav>
     </header>
     <main>
+        Hello world
         <ul>
             <li><a href="/flexbox/">Flexbox</a></li>
             <li><a href="/inline-block/">Inline-block</a></li>
