--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     </header>
     <main>
         <ul>
-            <li><a href="/flexbox/">Flexbox</a></li>
-            <li><a href="/inline-block/">Inline-block</a></li>
-            <li><a href="/minimize/">Minimize</a></li>
+            <li><a href="/flexbox/src/">Flexbox</a></li>
+            <li><a href="/inline-block/src/">Inline-block</a></li>
+            <li><a href="/minimize/src/">Minimize</a></li>
         </ul>
     </main>
     <footer></footer>
