--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
             </ul>
         </nav>
     </header>
-    <main>a
+    <main>
         <ul>
             <li><a href="/flexbox/src/">Flexbox</a></li>
             <li><a href="/inline-block/src/">Inline-block</a></li>
             <li><a href="/minimize/src/">Minimize</a></li>
+            <li><a href="/app/src/">App</a></li>
         </ul>
     </main>
     <footer></footer>
