--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><a href="/flexbox/src/">Flexbox</a></li>
             <li><a href="/inline-block/src/">Inline-block</a></li>
             <li><a href="/minimize/src/">Minimize</a></li>
+            <li><a href="/positions/src/">Positions</a></li>
             <li><a href="/app/src/">App</a></li>
         </ul>
     </main>
