--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <li><a href="/inline-block/src/">Inline-block</a></li>
             <li><a href="/minimize/src/">Minimize</a></li>
             <li><a href="/positions/src/">Positions</a></li>
+            <li><a href="/absolute_example/src/">Example of position absolute</a></li>
+            <li><a href="/map/src/">Map</a></li>
             <li><a href="/app/src/">App</a></li>
         </ul>
     </main>
