--- a/map/src/index.html
+++ b/map/src/index.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="main.css"/>
 </head>
 <body>
-    <img class="img" src="https://upload.wikimedia.org/wikipedia/commons/8/85/Blason_Mordor.svg" alt="mordor" style="top: 810px; left: 1160px" id="mordor" />
-    <img class="img" src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Escudo_Real_de_Gondor.svg" alt="gondor" style="top: 780px; left: 680px" />
-    <img class="img" src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Arms_of_Rohan.svg" alt="rohan" style="top: 640px; left: 750px" />
-    <img class="img" src="https://upload.wikimedia.org/wikipedia/commons/0/0a/Escudo_Isengard.svg" alt="isengard" style="top: 590px; left: 615px" />
-    <img class="img" src="https://upload.wikimedia.org/wikipedia/commons/7/79/Flag_of_Harad.svg" alt="harad" style="top: 1100px; left: 1050px" />
-    <img class="img" src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Escudo_Minas_Morgul.svg" alt="minas_morgul" style="top: 400px; left: 850px" />
-    <img class="img" src="https://static.wikia.nocookie.net/war-of-the-rings/images/2/21/%D0%9B%D0%BE%D1%80%D0%B8%D1%8D%D0%BD.png/revision/latest?cb=20181217115219&path-prefix=ru" alt="elfs1" style="top: 430px; left: 730px" />
-    <img class="img" src="https://static.wikia.nocookie.net/war-of-the-rings/images/1/18/%D0%9B%D0%9A.png/revision/latest?cb=20181221073606&path-prefix=ru" alt="elfs2" style="top: 150px; left: 875px" />
-    <img class="img" src="https://static.wikia.nocookie.net/war-of-the-rings/images/3/36/%D0%91%D1%80%D0%B8.png/revision/latest?cb=20181218084353&path-prefix=ru" alt="mans" style="top: 210px; left: 275px" />
-    <img class="img" src="https://static.wikia.nocookie.net/war-of-the-rings/images/2/27/Earendil-0-0.png/revision/latest?cb=20181208141803&path-prefix=ru" alt="elfs3" style="top: 210px; left: 690px" />
+    <img class="img" src="https://upload.wikimedia.org/wikipedia/commons/8/85/Blason_Mordor.svg" alt="mordor" style="top: 740px; left: 1112px" id="mordor" />
+    <img class="img" src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Escudo_Real_de_Gondor.svg" alt="gondor" style="top: 780px; left: 960px" id="gondor" />
+    <img class="img" src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Arms_of_Rohan.svg" alt="rohan" style="top: 670px; left: 670px" />
+    <img class="img" src="https://upload.wikimedia.org/wikipedia/commons/5/57/Blason_Isengard.svg" alt="isengard" style="top: 610px; left: 640px" id="isengard" />
+    <img class="img" src="https://upload.wikimedia.org/wikipedia/commons/7/79/Flag_of_Harad.svg" alt="harad" style="top: 1150px; left: 1065px" id="harad" />
+    <img class="img" src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Escudo_Minas_Morgul.svg" alt="minas_morgul" style="top: 435px; left: 870px" />
+    <img class="img" src="https://static.wikia.nocookie.net/war-of-the-rings/images/2/21/%D0%9B%D0%BE%D1%80%D0%B8%D1%8D%D0%BD.png/revision/latest?cb=20181217115219&path-prefix=ru" alt="elfs1" style="top: 445px; left: 765px" id="elfs" />
+    <img class="img" src="https://static.wikia.nocookie.net/war-of-the-rings/images/1/18/%D0%9B%D0%9A.png/revision/latest?cb=20181221073606&path-prefix=ru" alt="elfs2" style="top: 175px; left: 970px" />
+    <img class="img" src="https://static.wikia.nocookie.net/war-of-the-rings/images/2/27/Earendil-0-0.png/revision/latest?cb=20181208141803&path-prefix=ru" alt="elfs3" style="top: 245px; left: 725px" />
+    <img class="img" src="https://static.wikia.nocookie.net/war-of-the-rings/images/3/36/%D0%91%D1%80%D0%B8.png/revision/latest?cb=20181218084353&path-prefix=ru" alt="mans" style="top: 238px; left: 297px" />
+    <img class="img" src="https://static.wikia.nocookie.net/chronicles-of-middle-earth/images/9/93/%D0%91%D0%B5%D0%BB%D0%BA%D0%B0%D1%8D%D1%80.png/revision/latest?cb=20200112004013&path-prefix=ru" alt="umbar" style="top: 1200px; left: 800px" id="umbar"/>
 </body>
 </html>
