--- a/map/src/index.html
+++ b/map/src/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="main.css"/>
 </head>
 <body>
-    <img class="img" src="https://upload.wikimedia.org/wikipedia/commons/8/85/Blason_Mordor.svg" alt="mordor" style="top: 740px; left: 1112px" id="mordor" />
-    <img class="img" src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Escudo_Real_de_Gondor.svg" alt="gondor" style="top: 780px; left: 960px" id="gondor" />
-    <img class="img" src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Arms_of_Rohan.svg" alt="rohan" style="top: 670px; left: 670px" />
-    <img class="img" src="https://upload.wikimedia.org/wikipedia/commons/5/57/Blason_Isengard.svg" alt="isengard" style="top: 610px; left: 640px" id="isengard" />
-    <img class="img" src="https://upload.wikimedia.org/wikipedia/commons/7/79/Flag_of_Harad.svg" alt="harad" style="top: 1150px; left: 1065px" id="harad" />
-    <img class="img" src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Escudo_Minas_Morgul.svg" alt="minas_morgul" style="top: 435px; left: 870px" />
+    <img class="img" src="../public/mordor.svg" alt="mordor" style="top: 740px; left: 1112px" id="mordor" />
+    <img class="img" src="../public/gondor.svg" alt="gondor" style="top: 780px; left: 960px" id="gondor" />
+    <img class="img" src="../public/rohan.svg" alt="rohan" style="top: 670px; left: 670px" id="rohan"/>
+    <img class="img" src="../public/isengard.svg" alt="isengard" style="top: 610px; left: 640px" id="isengard" />
+    <img class="img" src="../public/harad.svg" alt="harad" style="top: 1150px; left: 1065px" id="harad" />
+    <img class="img" src="../public/minas_morgul.svg" alt="minas_morgul" style="top: 435px; left: 870px" id="minas_morgul" />
     <img class="img" src="https://static.wikia.nocookie.net/war-of-the-rings/images/2/21/%D0%9B%D0%BE%D1%80%D0%B8%D1%8D%D0%BD.png/revision/latest?cb=20181217115219&path-prefix=ru" alt="elfs1" style="top: 445px; left: 765px" id="elfs" />
     <img class="img" src="https://static.wikia.nocookie.net/war-of-the-rings/images/1/18/%D0%9B%D0%9A.png/revision/latest?cb=20181221073606&path-prefix=ru" alt="elfs2" style="top: 175px; left: 970px" />
     <img class="img" src="https://static.wikia.nocookie.net/war-of-the-rings/images/2/27/Earendil-0-0.png/revision/latest?cb=20181208141803&path-prefix=ru" alt="elfs3" style="top: 245px; left: 725px" />
