--- a/map/src/index.html
+++ b/map/src/index.html
@@ -13,10 +13,10 @@
     <img class="img" src="../public/isengard.svg" alt="isengard" style="top: 610px; left: 640px" id="isengard" />
     <img class="img" src="../public/harad.svg" alt="harad" style="top: 1150px; left: 1065px" id="harad" />
     <img class="img" src="../public/minas_morgul.svg" alt="minas_morgul" style="top: 435px; left: 870px" id="minas_morgul" />
-    <img class="img" src="https://static.wikia.nocookie.net/war-of-the-rings/images/2/21/%D0%9B%D0%BE%D1%80%D0%B8%D1%8D%D0%BD.png/revision/latest?cb=20181217115219&path-prefix=ru" alt="elfs1" style="top: 445px; left: 765px" id="elfs" />
-    <img class="img" src="https://static.wikia.nocookie.net/war-of-the-rings/images/1/18/%D0%9B%D0%9A.png/revision/latest?cb=20181221073606&path-prefix=ru" alt="elfs2" style="top: 175px; left: 970px" />
-    <img class="img" src="https://static.wikia.nocookie.net/war-of-the-rings/images/2/27/Earendil-0-0.png/revision/latest?cb=20181208141803&path-prefix=ru" alt="elfs3" style="top: 245px; left: 725px" />
-    <img class="img" src="https://static.wikia.nocookie.net/war-of-the-rings/images/3/36/%D0%91%D1%80%D0%B8.png/revision/latest?cb=20181218084353&path-prefix=ru" alt="mans" style="top: 238px; left: 297px" id="mans" />
-    <img class="img" src="https://static.wikia.nocookie.net/chronicles-of-middle-earth/images/9/93/%D0%91%D0%B5%D0%BB%D0%BA%D0%B0%D1%8D%D1%80.png/revision/latest?cb=20200112004013&path-prefix=ru" alt="umbar" style="top: 1200px; left: 800px" id="umbar"/>
+    <img class="img" src="../public/elfs1.webp" alt="elfs1" style="top: 445px; left: 765px" id="elfs" />
+    <img class="img" src="../public/elfs2.webp" alt="elfs2" style="top: 175px; left: 970px" />
+    <img class="img" src="../public/elfs3.webp" alt="elfs3" style="top: 245px; left: 725px" />
+    <img class="img" src="../public/mans.webp" alt="mans" style="top: 238px; left: 297px" id="mans" />
+    <img class="img" src="../public/umbar.webp" alt="umbar" style="top: 1200px; left: 800px" id="umbar"/>
 </body>
 </html>
