--- a/absolute_example/src/index.html
+++ b/absolute_example/src/index.html
@@ -9,7 +9,7 @@
 <body>
     <header></header>
     <main>
-        <div>
+        <div class="static-div">
             <p>Static div</p>
         </div>
 
