--- a/index.html
+++ b/index.html
@@ -18,15 +18,18 @@
         </nav>
     </header>
     <main>
-        <ul>
-            <li><a href="/flexbox/src/">Flexbox</a></li>
-            <li><a href="/inline-block/src/">Inline-block</a></li>
-            <li><a href="/minimize/src/">Minimize</a></li>
-            <li><a href="/positions/src/">Positions</a></li>
-            <li><a href="/absolute_example/src/">Example of position absolute</a></li>
-            <li><a href="/map/src/">Map</a></li>
-            <li><a href="/app/src/">App</a></li>
-        </ul>
+        <details>
+            <summary>hi</summary>
+            <ul>
+                <li><a href="/flexbox/src/">Flexbox</a></li>
+                <li><a href="/inline-block/src/">Inline-block</a></li>
+                <li><a href="/minimize/src/">Minimize</a></li>
+                <li><a href="/positions/src/">Positions</a></li>
+                <li><a href="/absolute_example/src/">Example of position absolute</a></li>
+                <li><a href="/map/src/">Map</a></li>
+                <li><a href="/app/src/">App</a></li>
+            </ul>
+        </details>
     </main>
     <footer></footer>
 </body>
