--- a/index.html
+++ b/index.html
@@ -19,14 +19,20 @@
     </header>
     <main>
         <details>
-            <summary>hi</summary>
+            <summary>Positions</summary>
+            <ul>
+                <li><a href="/position_fixed_example/src/">Position fixed example</a></li>
+                <li><a href="/absolute_example/src/">Example of position absolute</a></li>
+                <li><a href="/map/src/">Map</a></li>
+            </ul>
+        </details>
+
+        <details>
+            <summary>Others</summary>
             <ul>
                 <li><a href="/flexbox/src/">Flexbox</a></li>
                 <li><a href="/inline-block/src/">Inline-block</a></li>
                 <li><a href="/minimize/src/">Minimize</a></li>
-                <li><a href="/positions/src/">Positions</a></li>
-                <li><a href="/absolute_example/src/">Example of position absolute</a></li>
-                <li><a href="/map/src/">Map</a></li>
                 <li><a href="/app/src/">App</a></li>
             </ul>
         </details>
