--- a/absolute_example/src/index.html
+++ b/absolute_example/src/index.html
@@ -9,20 +9,24 @@
 <body>
     <header></header>
     <main>
-        <div class="static-div">
-            <p>Static div</p>
-        </div>
+        <div class="centered">
+            <div class="relative1">
+            <div class="static-div">
+                <p>Static div</p>
+            </div>
 
-        <div class="relative">
-            <p>Relative father</p>
+            <div class="relative">
+                <p>Relative div</p>
+            </div>
+            
+            <div class="relative">
+                <p>Relative div</p>
+            </div>
 
             <div class="absolute">
-                <p>Absolute children top: 500px left: 500px</p>
+                <p>Absolute children top: -300px left: -10px</p>
             </div>
-        </div>
-
-        <div class="absolute">
-            <p>Absolute father top: 500px left: 500px</p>
+            </div>
         </div>
     </main>
     <footer></footer>
