--- a/index.html
+++ b/index.html
@@ -19,21 +19,33 @@
     </header>
     <main>
         <details>
-            <summary>Positions</summary>
+            <summary>Position</summary>
             <ul>
-                <li><a href="/position_fixed_example/src/">Position fixed example</a></li>
-                <li><a href="/absolute_example/src/">Example of position absolute</a></li>
-                <li><a href="/map/src/">Map</a></li>
+                <li><a href="/position_fixed_example/src/">Fixed</a></li>
+                <li><a href="/absolute_example/src/">Absolute</a></li>
             </ul>
         </details>
 
         <details>
-            <summary>Others</summary>
+            <summary>Display</summary>
             <ul>
                 <li><a href="/flexbox/src/">Flexbox</a></li>
                 <li><a href="/inline-block/src/">Inline-block</a></li>
-                <li><a href="/minimize/src/">Minimize</a></li>
                 <li><a href="/app/src/">App</a></li>
+            </ul>
+        </details>
+
+        <details>
+            <summary>Side-bar</summary>
+            <ul>
+                <li><a href="/minimize/src/">Minimize</a></li>
+            </ul>
+        </details>
+
+        <details>
+            <summary>Map</summary>
+            <ul>
+                <li><a href="/map/src/">Map</a></li>
             </ul>
         </details>
     </main>
