--- a/absolute_example/src/index.html
+++ b/absolute_example/src/index.html
@@ -10,22 +10,22 @@
     <header></header>
     <main>
         <div class="centered">
-            <div class="relative1">
-            <div class="static-div">
-                <p>Static div</p>
-            </div>
+            <div class="relative-father">
+                <div class="static-div">
+                    <p>Static div</p>
+                </div>
 
-            <div class="relative">
-                <p>Relative div</p>
-            </div>
-            
-            <div class="relative">
-                <p>Relative div</p>
-            </div>
+                <div class="relative">
+                    <p>Relative div</p>
+                </div>
+                
+                <div class="relative-move">
+                    <p>Relative div</p>
+                </div>
 
-            <div class="absolute">
-                <p>Absolute children top: -300px left: -10px</p>
-            </div>
+                <div class="absolute">
+                    <p>Absolute children top: -300px left: -10px</p>
+                </div>
             </div>
         </div>
     </main>
