--- a/absolute_example/src/index.html
+++ b/absolute_example/src/index.html
@@ -11,20 +11,13 @@
     <main>
         <div class="centered">
             <div class="relative-father">
-                <div class="static-div">
-                    <p>Static div</p>
-                </div>
+                <p>Relative father</p> 
 
-                <div class="relative">
-                    <p>Relative div</p>
-                </div>
-                
-                <div class="relative-move">
-                    <p>Relative div</p>
-                </div>
-
-                <div class="absolute">
+                <div class="absolute up">
                     <p>Absolute children top: -300px left: -10px</p>
+                </div>
+                <div class="absolute down">
+                    <p>Absolute children bottom: -300px left: 10px</p>
                 </div>
             </div>
         </div>
