--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <details>
             <summary>Position</summary>
             <ul>
-                <li><a href="/position_fixed_example/src/">Fixed</a></li>
-                <li><a href="/absolute_example/src/">Absolute</a></li>
+                <li><a href="/fixed/src/">Fixed</a></li>
+                <li><a href="/absolute/src/">Absolute</a></li>
             </ul>
         </details>
 
