--- a/absolute/src/index.html
+++ b/absolute/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>example of position absolute</title>
+    <title>Position absolute example</title>
     <link rel="stylesheet" href="main.css"/>
 </head>
 <body>
