--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <summary>Position</summary>
             <ul>
                 <li><a href="/fixed/src/">Fixed</a></li>
+                <li><a href="/sticky/src/">Sticky</a></li>
                 <li><a href="/absolute/src/">Absolute</a></li>
             </ul>
         </details>
