--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li><a href="/fixed/src/">Fixed</a></li>
                 <li><a href="/sticky/src/">Sticky</a></li>
                 <li><a href="/absolute/src/">Absolute</a></li>
+                <li><a href="/z-index/src/">Z-index</a></li>
             </ul>
         </details>
 
