--- a/a.html
+++ b/a.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<h1 lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -163,4 +163,4 @@
         </div>
     </form>
 </body>
-</html>
+</h1>
