--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <li><a href="/sticky/src/">Sticky</a></li>
                 <li><a href="/absolute/src/">Absolute</a></li>
                 <li><a href="/z-index/src/">Z-index</a></li>
+                <li><a href="/form/src/">Form</a></li>
             </ul>
         </details>
 
