--- a/form/src/index.html
+++ b/form/src/index.html
@@ -60,6 +60,21 @@
         <div>
             <input type="number" id="left-parent" onchange="onChange(event, 'p')" />
         </div>
+
+        <div>
+            <label for="color-parent">Color</label>
+            <input type="color" id="color-parent" onchange="onChange(event, 'p')" />
+        </div>
+
+        <div>
+            <label for="border-color-parent">Border color</label>
+            <input type="color" id="border-color-parent" onchange="onChange(event, 'p')" />
+        </div>
+
+        <div>
+            <label for="background-color-parent">Background color</label>
+            <input type="color" id="background-color-parent" onchange="onChange(event, 'p')" />
+        </div>
     </form>
 
     <form>
@@ -99,15 +114,30 @@
             <input type="number" id="bottom-move" onchange="onChange(event, 'c')" />
         </div>
 
-        <label for="right">Right</label>
+        <label for="right-move">Right</label>
         <div>
             <input type="number" id="right-move" onchange="onChange(event, 'c')" />
         </div>
 
-        <label for="left">Left</label>
+        <label for="left-move">Left</label>
         <div>
             <input type="number" id="left-move" onchange="onChange(event, 'c')" />
         </div>
+
+        <div>
+            <label for="color-move">Color</label>
+            <input type="color" id="color-move" onchange="onChange(event, 'c')" />
+        </div>
+
+        <div>
+            <label for="border-color-move">Border color</label>
+            <input type="color" id="border-color-move" onchange="onChange(event, 'c')" />
+        </div>
+
+        <div>
+            <label for="background-color-move">Background color</label>
+            <input type="color" id="background-color-move" onchange="onChange(event, 'c')" />
+        </div>
     </form>
 </body>
-</html>
+</html>*
